# everyone-ai-with-jo

./: .markdownlint.json  pyproject.toml  tox.ini
colab/: 00-colab.ipynb
lecture/: part1-ch1.md  part2-ch1-딥러닝과 머신러닝의 기초 개념 및 실습 개요.xmind  part2-ch1.md  part2-ch1a-딥러닝과 머신러닝의 기초 개념 및 실습 이해.xmind  part2-ch2-딥러닝의 기초와 다층 퍼셉트론, 오차 역전파의 이해.xmind  part2-ch2.md  part2-ch3.md
